# zmqing

./: Makefile.am  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
_data/: package.yml
doc/: chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html
gap/: zmq.g  zmqing.gd  zmqing.gi
src/: zmqgap.c  zmqing.c
tst/: testall.g
